# CHiME9-ECHI

./: MIGRATION_GUIDE.md  Quickstart.ipynb  README.md  REPOSITORY_GUIDE.md  install_uv.sh  pyproject.toml  sync_to_mlp.sh
checkpoints/: aria_config.yaml
config/: paths.yaml  shared.yaml
config/enhancement/enhance_args/: trained_model.yaml
config/evaluation/: evaluate.yaml
config/train/: train.yaml  unpack.yaml
scripts/evaluation/: report.py
scripts/train/: train_script.py  unpack.py
slurm/: setup_cluster.sh  submit_ha_pipeline.sh
slurm/sbatch/: 01_unpack_ha_subset.sh  02_train_ha_subset.sh  02_train_ha_subset_TEST.sh  03_enhance_ha.sh  03_enhance_ha_trained.sh  04_evaluate_ha_trained.sh  README_EVALUATION.md
src/shared/: CausalMCxTFGridNet.py  core_utils.py
